# modelcards

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  TODO.md
.claude/skills/release/: SKILL.md
.github/workflows/: ci.yml  release.yml
crates/jayson/: Cargo.toml
crates/jayson/examples/: basic.rs
crates/jayson/src/: layer.rs  lib.rs  preview.rs  schema.rs  serve.rs
crates/jayson/src/ui/: index.html  mod.rs
crates/modelcards-edit/: Cargo.toml
crates/modelcards-edit/src/: main.rs  project.rs
docs/: feature-hierarchical-config.md  feature-visual-editor.md
ref/: Census Income Classifier_model_card.md  My Awesome Model_model_card.md  questionaire.md
ref/test-editor/: README.md  defaults.json  model.json  usecase.json
ref/test-editor/schema/: modelcard.schema.json
src/: cli.rs  main.rs  settings.rs  utils.rs
src/cmd/: build.rs  check.rs  init.rs  merge.rs  mod.rs  render.rs  validate.rs
src/cmd/init/: mod.rs
src/cmd/init/schema/: google.modelcard.schema.json  google.sample.json  mod.rs
src/lib/: lib.rs  merge.rs  render.rs  utils.rs  validate.rs
src/lib/assets/: mod.rs
src/lib/assets/config/: default.toml  mod.rs
src/lib/assets/schema/: google.sample.json  huggingface.modelcard.schema.md  mod.rs
src/lib/assets/templates/: google.modelcard.html.jinja  mod.rs
