[package]
name = "modelcards"
version = "0.1.1"
authors = ["Daniel Vorhauer <daniel@hexerei.net>"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
description = "A fast modelcard generator with built-in templates"
homepage = "https://www.hexerei.net"
repository = "https://github.com/hexerei/modelcards"
keywords = ["modelcard", "generator", "model", "ai", "ml", "governance"]
categories = ["command-line-utilities"]

include = ["src/**/*", "LICENSE", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "modelcards"
path = "src/lib/lib.rs"

[[bin]]
name = "modelcards"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
clap_complete = "4.5.1"
config = "0.14.0"
env_logger = "0.11.3"
log = "0.4.21"
minijinja = { version = "1.0.12", features = ["loader"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
valico = "4.0.0"

[dev-dependencies]
same-file = "1"
