[workspace]
members = [".", "crates/jayson", "crates/modelcards-edit"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json-patch = "4"
jsonschema = "0.45"
anyhow = "1"
log = "0.4"

[package]
name = "modelcards"
version = "0.1.4"
authors = ["Daniel Vorhauer <daniel@hexerei.net>"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
description = "A fast modelcard generator with built-in templates"
homepage = "https://www.hexerei.net"
repository = "https://github.com/hexerei/modelcards"
keywords = ["modelcard", "generator", "model", "ml", "governance"]
categories = ["command-line-utilities"]

include = ["src/**/*", "LICENSE", "README.md"]

[lib]
name = "modelcards"
path = "src/lib/lib.rs"

[[bin]]
name = "modelcards"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5.1", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
clap_complete = "4.5.1"
config = "0.14.0"
env_logger = "0.11.3"
log = { workspace = true }
minijinja = { version = "1.0.12", features = ["loader"] }
serde = { workspace = true }
serde_json = { workspace = true }
jsonschema = { workspace = true }

[dev-dependencies]
same-file = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
